syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "DataStoreCoordinatorProto";

package datastorecoordinator;

// Communication from datastores to the coordinator.
service DataStoreCoordinator {
    // Register a newly started datastore with the coordinator.
    rpc RegisterDataStore (RegisterDataStoreMessage) returns (RegisterDataStoreResponse) {}
    // Warn the coordinator that a datastore may be down.
    rpc PotentialDSFailure (PotentialDSFailureMessage) returns (PotentialDSFailureResponse) {}
    // Look up information about a table.
    rpc TableInfo (DTableInfoMessage) returns (DTableInfoResponse) {}
}

message RegisterDataStoreMessage {
    string host = 1;
    int32 port = 2;
    int32 cloudID = 3;
}

message RegisterDataStoreResponse {
    int32 returnCode = 1;
    int32 dataStoreID = 2;
}

message PotentialDSFailureMessage {
    int32 dsID = 1;
}

message PotentialDSFailureResponse {}

message DTableInfoMessage {
    string tableName = 1;
}

message DTableInfoResponse {
    int32 returnCode = 1;
    int32 id = 2;
    int32 numShards = 3;
}